<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
    android:id="@+id/nav_exercise"
    android:icon="@drawable/ic_fitness_center_black_24dp"
    android:title="@string/exercise"/>
  <item
    android:id="@+id/nav_category"
    android:icon="@drawable/ic_list_black_24dp"
    android:title="@string/category"/>
  <item
    android:id="@+id/nav_routine"
    android:icon="@drawable/ic_format_list_numbered_black_24dp"
    android:title="@string/routine"/>
...
