...
  <string name="item_deleted">%s deleted.</string>
  <string name="item_updated">%s updated.</string>
  <string name="new_item">New %s</string>
  <string name="new_item_created">New %s created.</string>
  <string name="no">No</string>
  <string name="please_enter_at_least_1_rep">Please enter at least 1 rep</string>
  <string name="please_enter_name">Please enter a name.</string>
  <string name="rename">Rename</string>
  <string name="rename_item">Rename %s</string>
  <string name="rename_successful">Rename successful</string>
  <string name="routine">Routine</string>
  <string name="same_name">Same name.</string>
  <string name="save">Save</string>
  <string name="save_changes">Save changes?</string>
  <string name="set">Set</string>
  <string name="set_added">Set added.</string>
  <string name="workout">Workout</string>
  <string name="would_save_changes_routine">Would you like to save changes made to the routine?</string>
...
