...
      android:layout_marginTop="-16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      app:errorEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_input_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:maxLength="32"/>
    </com.google.android.material.textfield.TextInputLayout>

...
